[package]
name = "autobahn-hash"
version = "0.1.0"
authors = ["Caleb Zulawski <caleb.zulawski@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "An implementation of HighwayHash, a fast and strong SIMD hash function"
repository = "https://github.com/calebzulawski/autobahn-hash"
categories = ["algorithms", "no-std", "wasm"]
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
std = []
multiversion = ["dep:multiversion", "std"]
default = ["multiversion"]

[dependencies]
multiversion = { version = "0.7", optional = true }
bytemuck = { version = "1", default-features = false, features = ["nightly_portable_simd"] }

[dev-dependencies]
criterion = { version = "0.4", default-features = false }
highway = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "implementation"
harness = false
