[package]
name = "autobahn-hash-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.4", features = ["arbitrary-derive"] }

[dependencies.autobahn-hash]
path = ".."

[build-dependencies]
cc = "1"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "reference"
path = "fuzz_targets/reference.rs"
test = false
doc = false
